:bulb: Expose endpoint for syncing specific team
