# src/routes.ts
@@ -3,6 +3,7 @@ import { getInstalledOrgsHandler } from "./handlers/getInstalledOrgs";
 import { getSourceTeamHandler } from "./handlers/getSourceTeam";
 import { syncAllHandler } from "./handlers/syncAll";
 import { syncOrgHandler } from "./handlers/syncOrg";
+import { syncSpecificTeamHandler } from "./handlers/syncSpecificTeamHandler";
 
 function notImplementedHandler(c: any, req: any, res: any) {
     return res
@@ -16,5 +17,6 @@ export const routes = {
     syncOrg: syncOrgHandler,
     syncAllOrgs: syncAllHandler,
     notImplemented: notImplementedHandler,
-    getSourceTeam: getSourceTeamHandler
+    getSourceTeam: getSourceTeamHandler,
+    syncSpecificTeam: syncSpecificTeamHandler
 }
